# nicodemus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  swarm-stack.yml
agent/: nico_agent.py  state.py
agent/tools/: __init__.py  create_secretary_request.py  faq_tools.py  find_student.py  get_school_summary.py  update_student_record.py
agent/tools/analyzers/: __init__.py  faq_analyzer.py
agents/: doc_reader.py  report_agent.py  state.py
alembic/: env.py
alembic/versions/: 0001_create_manager_sessions_and_messages.py
core/: api_client.py  auth.py  database.py  file_storage.py  memory.py  settings.py
models/: message.py  session.py
routers/: chat.py  doc.py  report.py  sessions.py  upload.py
schemas/: doc_types.py  faq_schemas.py  report_types.py  session_types.py
services/: session_service.py
tests/: test_doc_reader.py  test_faq_tools.py  test_report_agent.py
tools/: __init__.py  extract_document.py  generate_docx.py  generate_xlsx.py  patch_request.py  query_api.py  search_knowledge_base.py  validate_fields.py
